Subindo site completo Caramelo com botão

--- a/index.html
+++ b/index.html
@@ -4,43 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Incrível do Pedro</title>
+    <title>Carta Aberta</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="cabecalho">
-        <h1>Bem-vindo ao Meu Site</h1>
-        <p>Explorando HTML e CSS de forma profissional!</p>
+        <h1>Carta Aberta</h1>
+        <p>Uma mensagem especial para todos!</p>
     </header>
 
-    <section class="sobre">
-        <h2>Sobre Este Projeto</h2>
-        <p>Este site foi criado como parte das atividades de desenvolvimento web, separando o HTML e o CSS para uma organização mais profissional.</p>
-        <p>O objetivo é criar páginas bonitas, funcionais e bem estruturadas, prontos para o mundo real!</p>
-    </section>
-
-    <section class="galeria">
-        <h2>Galeria</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Projeto 1</h3>
-                <p>Exemplo de um projeto incrível feito com dedicação.</p>
-            </div>
-            <div class="card">
-                <h3>Projeto 2</h3>
-                <p>Mais um projeto com foco em qualidade e inovação.</p>
-            </div>
-            <div class="card">
-                <h3>Projeto 3</h3>
-                <p>Construindo experiência para o futuro!</p>
-            </div>
-        </div>
+    <section class="carta">
+        <h2>Querida Comunidade,</h2>
+        <p>
+            Hoje, escrevo esta carta com o coração cheio de gratidão. Cada momento compartilhado,
+            cada desafio superado e cada conquista celebrada juntos fizeram de nós algo mais do que apenas um grupo:
+            tornamo-nos uma verdadeira família. 
+        </p>
+        <p>
+            Em um mundo tão acelerado, encontrar pessoas que se apoiam mutuamente é um privilégio raro.
+            Que a nossa união, respeito e amizade continuem sendo nossos maiores valores.
+            Sigamos sempre de mãos dadas, construindo um futuro brilhante.
+        </p>
+        <p>
+            Com carinho e esperança,<br>
+            <strong>Pedro Henrique</strong>
+        </p>
     </section>
 
     <section class="projeto-caramelo">
         <h2>Conheça o Projeto Caramelo</h2>
-        <p>Um site dedicado ao nosso símbolo nacional, o cachorro caramelo!</p>
+        <p>Um tributo ao nosso símbolo nacional, o cachorro caramelo!</p>
         <a class="botao-caramelo" href="https://levoratoo.github.io/caramelo/" target="_blank">Ver Projeto Caramelo</a>
     </section>
 
